--- a/Redaction/Rapport_Final/Rapport.Rmd
+++ b/Redaction/Rapport_Final/Rapport.Rmd
@@ -98,11 +98,11 @@ $\phantom{}$%Si je ne fais pas ça il y a un bug avec le wrapfigure
 
 Grâce à l'évolution des méthodes d'apprentissage profond (*Deep Learning*), l'appréhension du langage naturel est aujourd'hui devenue une discipline à part entière (*Natural Language Processing*). 
 Ce succès s'explique en partie grâce à l'émergence de techniques non supervisées d'apprentissage de représentation de structures linguistiques. 
-Les méthodes de *word embedding* (« plongement lexical » en français) permettent de représenter chaque mot d'un dictionnaire par un vecteur de nombres réels afin que les mots qui apparaissent dans des contextes similaires possèdent des vecteurs correspondants qui sont relativement proches (au sens d'une distance définie). 
+Les méthodes de *word-embedding* (« plongement lexical » en français) permettent de représenter chaque mot d'un dictionnaire par un vecteur de nombres réels afin que les mots qui apparaissent dans des contextes similaires possèdent des vecteurs correspondants qui sont relativement proches (au sens d'une distance définie). 
 Les modèles *word2vec*, développés par une équipe de recherche chez Google (\cite{Mikolov}), sont parmi les plus célèbres et sont ceux sur lesquels se concentrera notre projet. 
 
 Dans ce projet de statistique appliquée, nous étudierons dans un premier temps en détail et implémenterons le modèle *word2vec* (partie \@ref(sec:word2vec)). 
-Dans un deuxième temps, nous évaluerons la validité du modèle implémenté et l'appliquerons sur une base de données composée de plusieurs millions de tweets publiés en France entre 2013 et 2017 (partie \@ref(sec:evaluation)). 
+Dans un deuxième temps, nous évaluerons le modèle implémenté et l'appliquerons sur une base de données composée d'1,3 million de tweets publiés en France entre 2013 et 2017 (partie \@ref(sec:evaluation)). 
 Enfin, nous mobiliserons des techniques d'analyse de sentiment afin de créer des indicateurs qui pourront être comparés aux indicateurs produits dans la statistique publique, en particulier concernant l'opinion des ménages (partie \@ref(sec:sentimentalAnalysis)). La figure \@ref(fig:schemaRecap) résume l'ensemble de notre démarche.
 
 
@@ -373,7 +373,7 @@ Ils recommandent également de prendre $K\in\{5,\dots,20\}$ pour les petites bas
 
 # Évaluation du modèle implémenté {#sec:evaluation}
 
-Malgré l'utilisation généralisée des *word embeddings*, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots. 
+Malgré l'utilisation généralisée des *word-embeddings*, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots. 
 
 C'est pourquoi ce modèle est principalement évalué à l'aide de méthodes empiriques. 
 L'annexe \@ref(annexe:commentEvaluer) décrit plus précisément les méthodes que nous avons retenues pour évaluer la qualité des vecteurs-mots. 
@@ -704,8 +704,8 @@ Peut-être ce mot n'a-t-il pas suffisamment été entraîné (246 apparitions da
 
 # Construction d'un indice mensuel de sentiment moyen des tweets {#sec:sentimentalAnalysis}
 
-Afin de créer un indice mensuel de sentiment moyen des tweets, nous allons utiliser les vecteurs-mots en sortie du modèle *word2vec* couplés avec une base de tweets annotée en termes de sentiment. Cette base contient un ensemble de tweets sur les transports urbains tous qualifiés de positifs ou négatifs .
-Nous comparerons ensuite cet indicateur avec indicateur synthétique de confiance des ménages (Camme, Insee). 
+Afin de créer un indice mensuel de sentiment moyen des tweets, nous allons utiliser les vecteurs-mots obtenus en sortie du modèle *word2vec* couplés avec une base de tweets annotée en termes de sentiment. Cette base contient un ensemble de tweets sur les transports urbains tous qualifiés de positifs ou négatifs .
+Nous comparerons ensuite cet indicateur avec l'indicateur synthétique de confiance des ménages (Camme, Insee). 
 L'ensemble de ces données sont décrites dans l'encadré \@ref(enc:encadre1).
 
 \begin{encadre}[true]{Données utilisées}\label{enc:encadre1}
@@ -719,7 +719,7 @@ Nous disposons de 4 200 tweets pour tous les mois de la période sous-échantill
 
 \textbf{Tweets annotés sur les transports urbains}
 
-Cette base est composée d'un ensemble d'environ 23 000 tweets qui concernent les transports urbains (trains SNCF, métros et bus de la RATP) annotés en termes de sentiment.
+Cette base est composée d'environ 23 000 tweets qui concernent les transports urbains (trains SNCF, métros et bus de la RATP) annotés en termes de sentiment.
 Nous avons transformé cette annotation de façon à ce qu'une valeur de $+1$ soit associée à un tweet considéré comme positif et $-1$ à un tweet considéré comme négatif.
 
 
@@ -789,12 +789,8 @@ Avec :
 \end{itemize}
 
 Puis nous appliquons le critère de classification suivant pour prédire le sentiment $S_{2,\gamma}(t) \in \{0,1\}$ du tweet $t$ avec le seuil $\gamma = 0,5$ :
-$$
-\begin{cases}
-S_{2,\gamma}(t) = 0 &  \text{ si} \quad \mathbb{P}(Y_i = 1 | X_{i}) < \gamma \\
-S_{2,\gamma}(t) = 1 &  \text{ si} \quad \mathbb{P}(Y_i = 1 | X_{i}) \ge \gamma
-\end{cases}
-$$
+
+ $$S_{2,\gamma}(t) = \mathds{1}\left\{   \mathbb{P}(Y_i = 1 | X_{i}) \ge \gamma\right\} \qquad \in [0,1]$$
 
 Afin de sélectionner le meilleur modèle, nous avons comparé 8 modèles comportant différentes spécifications en utilisant le critère de l'AUC (aire sous la courbe ROC^[
 La courbe ROC permet de représenter pour l'ensemble des seuils possibles l'évolution du nombre de vrais positifs en fonction du nombre de faux positifs. 
@@ -1050,7 +1046,7 @@ Il a été fascinant d’observer à quel point le modèle présente d’excelle
 
 
 Dans la partie \@ref(sec:sentimentalAnalysis) dédiée à l’analyse de sentiment, nous avons pu appliquer sur un cas concret plusieurs méthodes étudiées durant notre deuxième année à l'ENSAE (modèles de prédiction binaire, analyse de séries temporelles, minimisation du risque empirique / validation croisée\dots).
-L’entraînement et le test du modèle logit dont les prédicteurs correspondent aux dimensions des *word-embedding* nous a permis d’observer qu’en plus de représenter la proximité entre mots, le modèle *word2vec* permet de capter dans une certaine mesure le sentiment de phrases. 
+L’entraînement et le test du modèle logit dont les prédicteurs correspondent aux dimensions des *word-embedding* nous a permis de remarquer qu’en plus de représenter la proximité entre mots, le modèle *word2vec* permet de capter dans une certaine mesure le sentiment de phrases. 
 
 
 Bien sûr, la comparaison de l’indice mensuel de sentiment moyen des tweets que nous avons construit avec l’indicateur synthétique de confiance des ménages peut à première vue paraître « décevante » en raison des différences observées entre les deux séries.
