--- a/Redaction/Rapport_Final/img/schema_recap.tex
+++ b/Redaction/Rapport_Final/img/schema_recap.tex
@@ -24,7 +24,7 @@
 \node[fit={(13.9,1.5) (8.4,-5.5) }, myboxcomp,semitransparent] (rectcomp) {};
 
 \node at (0,0) [myboxw2v] (tweets) {Tweets};
-\node at (2.4,0) [myboxw2v] (we) {word-embedding};
+\node at (2.4,0) [myboxw2v] (we) {\textit{word-embedding}};
 % sentiment
 \node at (0,-4.5) [myboxnorm,text width=2.5cm, draw = black] (bddsent) {Échantillon de tweets annotés
 };
