Mini corrections (fin relecture)

--- a/Redaction/Note_Synthese/Synthese.tex
+++ b/Redaction/Note_Synthese/Synthese.tex
@@ -64,7 +64,8 @@
 
 
   \title{~\textsc{note de synthèse}\\
-\hspace*{0.333em}Word-Embedding et sentiments des ménages avec Twitter}
+\hspace*{0.333em}\emph{Word-Embedding} et sentiments des ménages avec
+Twitter}
     \author{Kim Antunez, Romain Lesauvage, Alain Quartier-la-Tente\\
 sous l'encadrement de Benjamin Muller (Inria)}
     \date{}
