--- a/Redaction/Rapport_Final/Rapport.tex
+++ b/Redaction/Rapport_Final/Rapport.tex
@@ -63,7 +63,7 @@
 \def\footnote{\protect\rmarkdownfootnote}
 
 
-  \title{~Word-Embedding et sentiments des ménages avec Twitter}
+  \title{~\emph{Word-Embedding} et sentiments des ménages avec Twitter}
     \author{Kim Antunez, Romain Lesauvage, Alain Quartier-la-Tente\\
 sous l'encadrement de Benjamin Muller (Inria)}
     \date{}
