--- a/Redaction/Note_Synthese/Synthese.Rmd
+++ b/Redaction/Note_Synthese/Synthese.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
     |  \textsc{note de synthèse}
-    |  Word-Embedding et sentiments des ménages avec Twitter 
+    |  *Word-Embedding* et sentiments des ménages avec Twitter 
 author: |
     | Kim Antunez, Romain Lesauvage, Alain Quartier-la-Tente
     | sous l'encadrement de Benjamin Muller (Inria)
